# bito-lint

./: .gitignore  .justfile  .repo.yml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES  cliff.toml  deny.toml
.claude/: CLAUDE.md
.claude/skills/adding-commands/: SKILL.md
.github/: coda.yml  formula.rb.tmpl
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/docs/: README.md  releases.md
.github/workflows/: cd.yml
.handoffs/: 2026-02-07-1730-retroactive-artifacts.md  2026-02-27-2130-template-update-and-cd-fixes.md  2026-03-01-2230-path-rules-and-docs.md  2026-03-02-0127-v0.3-features.md
.history/: README.md  code-review-2026-02-26.md  general-code-review-2026-02-09.md  security-review-2026-02-09.md
config/: bito-lint.toml.example  bito-lint.yaml.example
crates/bito-lint/: Cargo.toml
crates/bito-lint-core/: Cargo.toml
crates/bito-lint-core/src/: claude_vocab.json  completeness.rs  config.rs  directives.rs  error.rs  lib.rs  lint.rs  markdown.rs  readability.rs  rules.rs  text.rs  tokens.rs  word_lists.rs
crates/bito-lint-core/src/analysis/: acronyms.rs  cliches.rs  complex_paragraphs.rs  conjunction_starts.rs  consistency.rs  diction.rs  echoes.rs  jargon.rs  mod.rs  overused.rs  pacing.rs  repeated.rs  reports.rs  sensory.rs  sentence_length.rs  sticky.rs  style.rs  transitions.rs
crates/bito-lint-core/src/dictionaries/: abbreviations.rs  irregular_verbs.rs  mod.rs  syllable_dict.rs
crates/bito-lint-core/src/grammar/: checker.rs  mod.rs  passive_voice.rs
crates/bito-lint/src/: lib.rs  main.rs  observability.rs  server.rs
crates/bito-lint/src/commands/: analyze.rs  completeness.rs  custom.rs  doctor.rs  grammar.rs  info.rs  lint.rs  mod.rs  readability.rs  serve.rs  tokens.rs
crates/bito-lint/tests/: cli.rs  config_integration.rs
docs/: README.md  mcp-development.md  releases.md  tokens.md
docs/plans/: 2026-03-01-path-rules-design.md  2026-03-01-path-rules-implementation.md  2026-03-02-v0.3-features-design.md  2026-03-02-v0.3-features-implementation.md
npm/bito-lint/: index.js  install.js  package.json
scripts/: rename.sh
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: completions.rs  install.rs  man.rs
