[package]
name = "bito-lint-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for bito-lint"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude = [
    # Workspace-level files (/ = workspace root)
    "/.claude/",
    "/.github/",
    "/AGENTS.md",
    "/.justfile",
    "/.editorconfig",
    "/.markdownlint.yaml",
    "/.yamllint",
    "/.envrc",
    "/.env",
    "/.env.rust",

    "/docs/",
    "/deny.toml",
    # Example config files
    "/*.example",
]

[dependencies]
camino = { version = "1.2", features = ["serde1"] }
directories = "6.0"
figment = { version = "0.10", features = ["toml", "yaml", "json"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
regex = "1.11"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tiktoken-rs = "0.6"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.24"

[lints]
workspace = true


