[package]
name = "bito-lint-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for bito-lint"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude = [
    # Workspace-level files (/ = workspace root)
    "/.claude/",
    "/.github/",
    "/AGENTS.md",
    "/.justfile",
    "/.editorconfig",
    "/.markdownlint.yaml",
    "/.yamllint",
    "/.envrc",
    "/.env",
    "/.env.rust",

    "/docs/",
    "/deny.toml",
    # Example config files
    "/*.example",
]

[features]
clap = ["dep:clap"]

[dependencies]
camino = { version = "1.2", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"], optional = true }
directories = "6.0"
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
regex = "1.12"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

# Tokenizer backends
aho-corasick = "1"
bpe-openai = "0.3"

[dev-dependencies]
tempfile = "3.26"

[lints]
workspace = true


